--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -40,9 +40,9 @@
       </div>
       
       <div class="hero-buttons animate-fade-in-up animate-delay-4">
-        <button type="button" class="btn btn-primary" (click)="openQuoteCalculator()">
+        <button type="button" class="btn btn-primary" (click)="scrollToContact()">
           <i class="fas fa-calculator"></i>
-          Calcular Orçamento Grátis
+          Solicitar Cotação Grátis
         </button>
         <button type="button" class="btn btn-secondary" (click)="scheduleConsultation()">
           <i class="fas fa-video"></i>
