--- a/src/styles.scss
+++ b/src/styles.scss
@@ -97,6 +97,9 @@ body {
   max-width: 1200px;
   margin: 0 auto;
   padding: 0 var(--spacing-lg);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
   @include respond-below(xl) {
     max-width: 95%;
@@ -120,6 +123,7 @@ section {
   flex-direction: column;
   justify-content: center;
   position: relative;
+  text-align: center;
 
   @include respond-below(md) {
     min-height: auto;
@@ -128,6 +132,10 @@ section {
 
   &#home {
     min-height: 100vh;
+  }
+
+  &#contact {
+    text-align: left;
   }
 }
 
